tests/security/taintedInputToParam/output.txt
ERROR: TaintedData - input.hack:14:22 - Detected tainted SQL